部分修改了选号页面功能，处理了switch语句的defalut分支问题 	new file:   res/layout/doubleball_selfselect_loss_activity.xml 	new file:   res/layout/doubleball_selfselect_normal_activity.xml 	new file:   res/layout/doubleball_selfselect_viewpager_activity.xml 	renamed:    res/layout/viewpagers_activity.xml -> res/layout/lottery_viewpager_activity.xml 	modified:   res/values/attrs.xml 	modified:   src/com/ruyicai/android/controller/activity/BaseActivity.java 	modified:   src/com/ruyicai/android/controller/activity/home/buylotteryhall/BuyLotteryHallActivity.java 	new file:   src/com/ruyicai/android/controller/activity/home/buylotteryhall/LotteryViewPagerSelectNumberActivity.java 	renamed:    src/com/ruyicai/android/controller/activity/viewpagers/PlayMethodTextViewInterface.java -> src/com/ruyicai/android/controller/activity/home/buylotteryhall/PlayMethodTextViewInterface.java 	renamed:    src/com/ruyicai/android/controller/activity/viewpagers/SelectNumberActivity.java -> src/com/ruyicai/android/controller/activity/home/buylotteryhall/SelectNumberActivity.java 	renamed:    src/com/ruyicai/android/controller/activity/home/buylotteryhall/activitygroups/SpinnersActivityGroup.java -> src/com/ruyicai/android/controller/activity/home/buylotteryhall/SpinnersActivityGroup.java 	renamed:    src/com/ruyicai/android/controller/activity/home/buylotteryhall/switchtabs/SwitchTabsActivityGroup.java -> src/com/ruyicai/android/controller/activity/home/buylotteryhall/SwitchTabsActivityGroup.java 	renamed:    src/com/ruyicai/android/controller/activity/viewpagers/ViewPagesActivity.java -> src/com/ruyicai/android/controller/activity/home/buylotteryhall/ViewPagesActivity.java 	deleted:    src/com/ruyicai/android/controller/activity/home/buylotteryhall/activitygroups/.svn/all-wcprops 	deleted:    src/com/ruyicai/android/controller/activity/home/buylotteryhall/activitygroups/.svn/entries 	deleted:    src/com/ruyicai/android/controller/activity/home/buylotteryhall/activitygroups/.svn/prop-base/SpinnersActivityGroup.j

--- a/res/layout/lottery_viewpager_activity.xml
+++ b/res/layout/lottery_viewpager_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 滑动切换页面布局：拥有滑动区，并可以根据需要自动添加其它控件 -->
+<!-- 彩种滑动切换投注页面布局：拥有滑动区，并可以根据需要自动添加其它控件 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/viewpagers_relativelayout_container"
     android:layout_width="match_parent"
@@ -9,7 +9,7 @@
     <!-- 滑动区域 -->
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewpagers_viewpager_slidearea"
+        android:id="@+id/lottery_viewpagers_slidearea"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
