修改了双色球自选和胆拖的滑动页面

--- a/res/layout/doubleball_courageselect_loss_activity.xml
+++ b/res/layout/doubleball_courageselect_loss_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 双色球自选遗漏值页面 -->
+<!-- 双色球胆拖遗漏值页面 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,6 +8,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="selfloss" />
+        android:text="courageloss" />
 
 </LinearLayout>
