--- a/res/layout/selectnumber_panel.xml
+++ b/res/layout/selectnumber_panel.xml
@@ -11,31 +11,30 @@
         android:gravity="center_vertical" >
 
         <!-- 标题 -->
-
         <TextView
             android:id="@+id/selectnumberpanel_textview_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:text="红球区：" />
+            android:text="红球区："
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <!-- 随机选号按钮 -->
-
         <com.ruyicai.android.controller.compontent.selectnumber.RandomSelectNumberButton
             android:id="@+id/selectnumberpanel_selectnumberbutton_random"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true" />
-    </RelativeLayout>
-    <!-- 选号小球网格布局 -->
 
-    <com.ruyicai.android.controller.compontent.selectnumber.SelectNumberBallGridView
-        android:id="@+id/selectnumberpanel_gridview_numberball"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/selectnumberpanel_randomselectnumberbutton_random"
-        android:layout_marginTop="91dp"
-        android:numColumns="3" />
+        <!-- 选号小球表格 -->
+        <com.ruyicai.android.controller.compontent.selectnumberpanel.SelectNumberBallsTableLayout
+            android:id="@+id/selectnumberpanel_selectnumberballs_tablelayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/selectnumberpanel_randomselectnumberbutton_random"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
