优化了TitleBar的布局结构，进一步修双色球改选号页面 	modified:   res/layout/doubleball_selfselect_normal_activity.xml 	modified:   res/layout/lotteryinformation_activity.xml 	modified:   res/layout/randombutton.xml 	modified:   res/layout/selectnumber_panel.xml 	modified:   res/layout/title_bar.xml 	modified:   res/values/attrs.xml 	modified:   res/values/strings.xml 	modified:   src/com/ruyicai/android/controller/activity/home/buylotteryhall/BuyLotteryHallActivity.java 	modified:   src/com/ruyicai/android/controller/activity/home/buylotteryhall/LotteryInformationActivity.java 	modified:   src/com/ruyicai/android/controller/compontent/bar/TitleBar.java 	new file:   src/com/ruyicai/android/controller/compontent/button/RandomSelectButton.java 	deleted:    src/com/ruyicai/android/controller/compontent/button/RandomSelectNumberButton.java 	renamed:    src/com/ruyicai/android/controller/compontent/dropdownmenu/RandomButtonDropDownMenu.java -> src/com/ruyicai/android/controller/compontent/dropdownmenu/SelectRandomNumDropDownMenu.java 	modified:   src/com/ruyicai/android/controller/compontent/panel/SelectNumberPanel.java 	renamed:    src/com/ruyicai/android/controller/compontent/selectnumberpanel/SelectNumberBallsTableLayout.java -> src/com/ruyicai/android/controller/compontent/selectnumberpanel/SelectNumberBallsTable.java

--- a/res/layout/doubleball_selfselect_normal_activity.xml
+++ b/res/layout/doubleball_selfselect_normal_activity.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 双色球自选普通页面 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res/com.ruyicai.android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <TextView
+    
+    <!-- 红球选号面板 -->
+    <com.ruyicai.android.controller.compontent.panel.SelectNumberPanel
+        android:id="@+id/doubleball_selfselect_red_selectnumberpanel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="selfnormal" />
+        custom:_fIsShowLossValue="false"
+        custom:_fRandomButtonDropDownMenuButtonNum="11"
+        custom:_fRandomButtonMinRandomNum="6"
+        custom:_fRandomButtonRandomNum="6"
+        custom:_fSelectNumberBallNum="33"
+        custom:_fSelectNumberBallStartNum="1"
+        custom:_fSelectNumberBallType="red"
+        custom:_fTitleTextId="@string/doubleball_selfselect_redselectnumberpanel_title" />
 
 </LinearLayout>
