--- a/res/layout/doubleball_selfselect_normal_activity.xml
+++ b/res/layout/doubleball_selfselect_normal_activity.xml
@@ -5,12 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
     <!-- 红球选号面板 -->
+
     <com.ruyicai.android.controller.compontent.panel.SelectNumberPanel
-        android:id="@+id/doubleball_selfselect_red_selectnumberpanel"
+        android:id="@+id/doubleball_selfselect_normal_red_selectnumberpanel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         custom:_fIsShowLossValue="false"
         custom:_fRandomButtonDropDownMenuButtonNum="11"
         custom:_fRandomButtonMinRandomNum="6"
@@ -19,5 +21,21 @@
         custom:_fSelectNumberBallStartNum="1"
         custom:_fSelectNumberBallType="red"
         custom:_fTitleTextId="@string/doubleball_selfselect_redselectnumberpanel_title" />
+
+    <!-- 蓝球选号面板 -->
+
+    <com.ruyicai.android.controller.compontent.panel.SelectNumberPanel
+        android:id="@+id/doubleball_selfselect_normal_red_selectnumberpanel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        custom:_fIsShowLossValue="false"
+        custom:_fRandomButtonDropDownMenuButtonNum="16"
+        custom:_fRandomButtonMinRandomNum="1"
+        custom:_fRandomButtonRandomNum="1"
+        custom:_fSelectNumberBallNum="16"
+        custom:_fSelectNumberBallStartNum="1"
+        custom:_fSelectNumberBallType="blue"
+        custom:_fTitleTextId="@string/doubleball_selfselect_blueselectnumberpanel_title" />
 
 </LinearLayout>
