--- a/res/layout/jiangxielevenselectfive_spinners_activitygroup.xml
+++ b/res/layout/jiangxielevenselectfive_spinners_activitygroup.xml
@@ -35,7 +35,7 @@
 
     <!-- 投注栏 -->
 
-    <com.ruyicai.android.controller.compontent.bar.BetBar
+    <com.ruyicai.android.controller.compontent.bar.BettingBar
         android:id="@+id/jiangxielevenselectfive_spinners_activitygroup_betbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
