--- a/res/layout/spinners_activitygroup.xml
+++ b/res/layout/spinners_activitygroup.xml
@@ -32,7 +32,7 @@
 
     <!-- 投注栏 -->
 
-    <com.ruyicai.android.controller.compontent.bar.BetBar
+    <com.ruyicai.android.controller.compontent.bar.BettingBar
         android:id="@+id/spinners_activitygroup_betbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
