--- a/res/layout/doubleball_selfselect_loss_activity.xml
+++ b/res/layout/doubleball_selfselect_loss_activity.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         xmlns:custom="http://schemas.android.com/apk/res/com.ruyicai.android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <!-- 红球选号面板 -->
