--- a/res/layout/lotteryinformation_bar.xml
+++ b/res/layout/lotteryinformation_bar.xml
@@ -15,7 +15,7 @@
         android:paddingLeft="10dip"
         android:text="上期开奖号码：01,02,13,14,12"
         android:textColor="@color/black"
-        android:textSize="14dip" />
+        android:textSize="14sp" />
     <!-- 开奖期号 -->
 
     <TextView
@@ -27,7 +27,7 @@
         android:paddingLeft="10dip"
         android:text="第20081243期"
         android:textColor="@color/black"
-        android:textSize="14dip" />
+        android:textSize="14sp" />
     <!-- 截止时间 -->
 
     <TextView
@@ -39,6 +39,6 @@
         android:paddingRight="10dip"
         android:text="截止时间：12:23:12"
         android:textColor="@color/black"
-        android:textSize="14dip" />
+        android:textSize="14sp" />
 
 </RelativeLayout>
