--- a/res/layout/doubleball_courageselect_loss_page.xml
+++ b/res/layout/doubleball_courageselect_loss_page.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 双色球胆拖遗漏值页面 -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res/com.ruyicai.android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none" >
 
     <LinearLayout
-        xmlns:custom="http://schemas.android.com/apk/res/com.ruyicai.android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical" >
 
         <!-- 胆码选号面板 -->
