--- a/res/layout/doubleball_courageselect_normal_page.xml
+++ b/res/layout/doubleball_courageselect_normal_page.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 双色球胆拖普通页面 -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res/com.ruyicai.android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none" >
 
     <LinearLayout
-        xmlns:custom="http://schemas.android.com/apk/res/com.ruyicai.android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical" >
-         <!-- 胆码选号面板 -->
+
+        <!-- 胆码选号面板 -->
 
         <com.ruyicai.android.controller.compontent.panel.SelectNumberPanel
             android:id="@+id/doubleball_courageselect_normal_courage_selectnumberpanel"
@@ -43,6 +45,7 @@
             custom:_fTitleTextId="@string/doubleball_courageselect_tuoselectnumberpanel_title" />
 
         <!-- 蓝球选号面板 -->
+
         <com.ruyicai.android.controller.compontent.panel.SelectNumberPanel
             android:id="@+id/doubleball_courageselect_normal_blue_selectnumberpanel"
             android:layout_width="wrap_content"
