--- a/res/layout/doubleball_selfselect_normal_page.xml
+++ b/res/layout/doubleball_selfselect_normal_page.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 双色球自选普通页面 -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res/com.ruyicai.android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none">
+    android:scrollbars="none" >
 
     <LinearLayout
-        xmlns:custom="http://schemas.android.com/apk/res/com.ruyicai.android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical" 
+        android:gravity="center_horizontal">
 
         <!-- 红球选号面板 -->
 
