--- a/res/layout/jiangxielevenselectfive_optional_selfselect_normal_page.xml
+++ b/res/layout/jiangxielevenselectfive_optional_selfselect_normal_page.xml
@@ -18,7 +18,7 @@
             android:id="@+id/jiangxi11xuan5_selfselect_normal_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black" />
+            android:textColor="@color/red" />
         <!-- 选号面板 -->
 
         <com.ruyicai.android.controller.compontent.panel.SelectNumberPanel
